src/various/GrammarParser.output
Terminals unused in grammar

    "this"


Grammar

    0 $accept: Specification "end of file"

    1 Specification: Header Definitions

    2 Header: Attributes "CASM"
    3       | "CASM"

    4 Definitions: Definitions AttributedDefinition
    5            | AttributedDefinition

    6 AttributedDefinition: Attributes Definition
    7                     | Definition
    8                     | error

    9 Definition: InitDefinition
   10           | EnumerationDefinition
   11           | DerivedDefinition
   12           | RuleDefinition
   13           | FunctionDefinition
   14           | UsingDefinition
   15           | UsingPathDefinition
   16           | InvariantDefinition
   17           | ImportDefinition
   18           | StructureDefinition
   19           | FeatureDefinition
   20           | ImplementationDefinition

   21 InitDefinition: "init" IdentifierPath
   22               | "init" "{" Initializers "}"

   23 EnumerationDefinition: "enumeration" Identifier "=" "{" Enumerators "}"

   24 DerivedDefinition: "derived" Identifier "->" Type "=" Term
   25                  | "derived" Identifier "(" Parameters ")" "->" Type "=" Term
   26                  | "derived" Identifier "(" error ")" "->" Type "=" Term

   27 RuleDefinition: "rule" Identifier "=" Rule
   28               | "rule" Identifier "->" Type "=" Rule
   29               | "rule" Identifier "(" Parameters ")" "=" Rule
   30               | "rule" Identifier "(" Parameters ")" "->" Type "=" Rule
   31               | "rule" Identifier "(" error ")" "=" Rule
   32               | "rule" Identifier "(" error ")" "->" Type "=" Rule

   33 FunctionDefinitions: FunctionDefinitions FunctionDefinition
   34                    | FunctionDefinition

   35 FunctionDefinition: "function" Identifier ":" MaybeFunctionParameters "->" Type MaybeDefined MaybeInitially

   36 EnumeratorDefinition: Identifier
   37                     | Attributes Identifier
   38                     | error

   39 Enumerators: Enumerators "," EnumeratorDefinition
   40            | EnumeratorDefinition

   41 UsingDefinition: "using" Identifier "=" Type

   42 UsingPathDefinition: "using" IdentifierPath
   43                    | "using" IdentifierPath "::" "*"

   44 InvariantDefinition: "invariant" Identifier "=" Term

   45 ImportDefinition: "import" IdentifierPath
   46                 | "import" IdentifierPath "as" Identifier

   47 StructureDefinition: "structure" Identifier "=" "{" FunctionDefinitions "}"

   48 FeatureDefinition: "feature" Identifier "=" "{" FeatureDeclarationsAndDefinitions "}"

   49 FeatureDeclarationOrDefinition: DeclarationDefinition
   50                               | DerivedDefinition
   51                               | RuleDefinition

   52 FeatureDeclarationsAndDefinitions: FeatureDeclarationsAndDefinitions FeatureDeclarationOrDefinition
   53                                  | FeatureDeclarationOrDefinition

   54 ImplementationDefinition: "implements" IdentifierPath "for" Type "=" "{" ImplementationDefinitionDefinitions "}"
   55                         | "implements" Type "=" "{" ImplementationDefinitionDefinitions "}"

   56 ImplementationDefinitionDefinition: DerivedDefinition
   57                                   | RuleDefinition

   58 ImplementationDefinitionDefinitions: ImplementationDefinitionDefinition ImplementationDefinitionDefinitions
   59                                    | ImplementationDefinitionDefinition

   60 DeclarationDefinition: "derived" Identifier ":" MaybeFunctionParameters "->" Type
   61                      | "rule" Identifier ":" MaybeFunctionParameters "->" Type

   62 Rules: Rules Rule
   63      | Rule

   64 Rule: SkipRule
   65     | ConditionalRule
   66     | CaseRule
   67     | LetRule
   68     | LocalRule
   69     | ForallRule
   70     | ChooseRule
   71     | IterateRule
   72     | BlockRule
   73     | SequenceRule
   74     | UpdateRule
   75     | CallRule
   76     | WhileRule

   77 SkipRule: "skip"

   78 ConditionalRule: "if" Term "then" Rule
   79                | "if" Term "then" Rule "else" Rule

   80 CaseRule: "case" Term "of" "{" CaseLabels "}"
   81         | "case" Term "of" "{" error "}"

   82 CaseLabels: CaseLabels CaseLabel
   83           | CaseLabel

   84 CaseLabel: "default" ":" Rule
   85          | "_" ":" Rule
   86          | Term ":" Rule

   87 LetRule: "let" VariableBindings "in" Rule

   88 LocalRule: "local" LocalFunctionDefinitions "in" Rule

   89 ForallRule: "forall" AttributedVariables "in" Term "do" Rule
   90           | "forall" AttributedVariables "in" Term "with" Term "do" Rule

   91 ChooseRule: "choose" AttributedVariables "in" Term "do" Rule

   92 IterateRule: "iterate" Rule

   93 BlockRule: "{" Rules "}"
   94          | "par" Rules "endpar"
   95          | "{" error "}"
   96          | "par" error "endpar"

   97 SequenceRule: "{|" Rules "|}"
   98             | "seq" Rules "endseq"
   99             | "{|" error "|}"
  100             | "seq" error "endseq"

  101 UpdateRule: DirectCallExpression ":=" Term

  102 CallRule: CallExpression

  103 WhileRule: "while" Term "do" Rule

  104 Terms: Terms "," Term
  105      | Term

  106 Term: SimpleOrClaspedTerm
  107     | TypeCastingExpression
  108     | OperatorExpression
  109     | LetExpression
  110     | ConditionalExpression
  111     | ChooseExpression
  112     | UniversalQuantifierExpression
  113     | ExistentialQuantifierExpression
  114     | CardinalityExpression

  115 SimpleOrClaspedTerm: "(" Term ")"
  116                    | "(" error ")"
  117                    | CallExpression
  118                    | LiteralCallExpression
  119                    | Literal
  120                    | "+" SimpleOrClaspedTerm
  121                    | "-" SimpleOrClaspedTerm

  122 OperatorExpression: Term "+" Term
  123                   | Term "-" Term
  124                   | Term "*" Term
  125                   | Term "/" Term
  126                   | Term "%" Term
  127                   | Term "^" Term
  128                   | Term "!=" Term
  129                   | Term "=" Term
  130                   | Term "<" Term
  131                   | Term ">" Term
  132                   | Term "<=" Term
  133                   | Term ">=" Term
  134                   | Term "or" Term
  135                   | Term "xor" Term
  136                   | Term "and" Term
  137                   | Term "=>" Term
  138                   | Term "implies" Term
  139                   | "not" Term

  140 CallExpression: DirectCallExpression
  141               | MethodCallExpression
  142               | IndirectCallExpression

  143 DirectCallExpression: IdentifierPath
  144                     | IdentifierPath "(" ")"
  145                     | IdentifierPath "(" Terms ")"
  146                     | IdentifierPath "(" error ")"

  147 MethodCallExpression: SimpleOrClaspedTerm "." Identifier
  148                     | SimpleOrClaspedTerm "." Identifier "(" ")"
  149                     | SimpleOrClaspedTerm "." Identifier "(" Terms ")"
  150                     | SimpleOrClaspedTerm "." Identifier "(" error ")"

  151 LiteralCallExpression: SimpleOrClaspedTerm "." IntegerLiteral

  152 IndirectCallExpression: CallExpression "(" ")"
  153                       | CallExpression "(" Terms ")"
  154                       | CallExpression "(" error ")"

  155 TypeCastingExpression: SimpleOrClaspedTerm "as" Type

  156 LetExpression: "let" VariableBindings "in" Term

  157 ConditionalExpression: "if" Term "then" Term "else" Term

  158 ChooseExpression: "choose" AttributedVariables "in" Term "do" Term

  159 UniversalQuantifierExpression: "forall" AttributedVariables "in" Term "holds" Term

  160 ExistentialQuantifierExpression: "exists" AttributedVariables "in" Term "with" Term

  161 CardinalityExpression: "|" SimpleOrClaspedTerm "|"

  162 Literal: UndefinedLiteral
  163        | BooleanLiteral
  164        | IntegerLiteral
  165        | RationalLiteral
  166        | DecimalLiteral
  167        | BinaryLiteral
  168        | StringLiteral
  169        | ReferenceLiteral
  170        | ListLiteral
  171        | RangeLiteral
  172        | TupleLiteral
  173        | RecordLiteral

  174 UndefinedLiteral: "undef"

  175 BooleanLiteral: "true"
  176               | "false"

  177 IntegerLiteral: "integer"

  178 RationalLiteral: "rational"

  179 DecimalLiteral: "decimal"

  180 BinaryLiteral: "binary"
  181              | "hexadecimal"

  182 StringLiteral: "string"

  183 ReferenceLiteral: "@" IdentifierPath

  184 ListLiteral: "[" "]"
  185            | "[" Terms "]"
  186            | "[" error "]"

  187 RangeLiteral: "[" Term ".." Term "]"

  188 TupleLiteral: "(" Terms "," Term ")"

  189 RecordLiteral: "(" Assignments ")"

  190 Assignments: Assignments "," Assignment
  191            | Assignment

  192 Assignment: Identifier ":" Term

  193 Types: Types "," Type
  194      | Type

  195 Type: BasicType
  196     | TupleType
  197     | RecordType
  198     | TemplateType
  199     | RelationType
  200     | FixedSizedType

  201 BasicType: IdentifierPath

  202 TupleType: "(" Types "," Type ")"

  203 RecordType: "(" TypedVariables "," TypedVariable ")"

  204 TemplateType: IdentifierPath "<" Types ">"

  205 RelationType: IdentifierPath "<" MaybeFunctionParameters "->" Type ">"

  206 FixedSizedType: IdentifierPath "'" Term

  207 FunctionParameters: FunctionParameters "*" Type
  208                   | Type

  209 MaybeFunctionParameters: FunctionParameters
  210                        | %empty

  211 Parameters: Parameters "," TypedAttributedVariable
  212           | TypedAttributedVariable

  213 MaybeDefined: "defined" "{" Term "}"
  214             | %empty

  215 MaybeInitially: "=" "{" Initializers "}"
  216               | %empty

  217 Initializers: Initializers "," Initializer
  218             | Initializer

  219 Initializer: Term
  220            | "(" Term ")" "->" Term
  221            | TupleLiteral "->" Term

  222 Identifier: "identifier"
  223           | "in"

  224 IdentifierPath: IdentifierPath "::" Identifier
  225               | Identifier

  226 Variable: TypedVariable
  227         | Identifier

  228 AttributedVariables: AttributedVariables "," AttributedVariable
  229                    | AttributedVariable

  230 TypedVariables: TypedVariables "," TypedVariable
  231               | TypedVariable

  232 TypedVariable: Identifier ":" Type

  233 AttributedVariable: Attributes Variable
  234                   | Variable

  235 TypedAttributedVariable: Attributes TypedVariable
  236                        | TypedVariable

  237 VariableBindings: VariableBindings "," VariableBinding
  238                 | VariableBinding

  239 VariableBinding: AttributedVariable "=" Term

  240 LocalFunctionDefinitions: LocalFunctionDefinitions "," AttributedLocalFunctionDefinition
  241                         | AttributedLocalFunctionDefinition

  242 AttributedLocalFunctionDefinition: Attributes LocalFunctionDefinition
  243                                  | LocalFunctionDefinition
  244                                  | error

  245 LocalFunctionDefinition: Identifier ":" MaybeFunctionParameters "->" Type MaybeDefined MaybeInitially

  246 Attributes: Attributes Attribute
  247           | Attribute

  248 Attribute: "[" BasicAttribute "]"
  249          | "[" ExpressionAttribute "]"
  250          | "[" error "]"

  251 BasicAttribute: Identifier

  252 ExpressionAttribute: Identifier Term


Terminals, with rules where they appear

    "end of file" (0) 0
    error (256) 8 26 31 32 38 81 95 96 99 100 116 146 150 154 186 244 250
    "CASM" <Ast::Token::Ptr> (258) 2 3
    "init" <Ast::Token::Ptr> (259) 21 22
    "derived" <Ast::Token::Ptr> (260) 24 25 26 60
    "enumeration" <Ast::Token::Ptr> (261) 23
    "rule" <Ast::Token::Ptr> (262) 27 28 29 30 31 32 61
    "using" <Ast::Token::Ptr> (263) 41 42 43
    "invariant" <Ast::Token::Ptr> (264) 44
    "import" <Ast::Token::Ptr> (265) 45 46
    "structure" <Ast::Token::Ptr> (266) 47
    "feature" <Ast::Token::Ptr> (267) 48
    "implements" <Ast::Token::Ptr> (268) 54 55
    "for" <Ast::Token::Ptr> (269) 54
    "this" <Ast::Token::Ptr> (270)
    "function" <Ast::Token::Ptr> (271) 35
    "defined" <Ast::Token::Ptr> (272) 213
    "seq" <Ast::Token::Ptr> (273) 98 100
    "endseq" <Ast::Token::Ptr> (274) 98 100
    "par" <Ast::Token::Ptr> (275) 94 96
    "endpar" <Ast::Token::Ptr> (276) 94 96
    "skip" <Ast::Token::Ptr> (277) 77
    "let" <Ast::Token::Ptr> (278) 87 156
    "local" <Ast::Token::Ptr> (279) 88
    "in" <Ast::Token::Ptr> (280) 87 88 89 90 91 156 158 159 160 223
    "forall" <Ast::Token::Ptr> (281) 89 90 159
    "choose" <Ast::Token::Ptr> (282) 91 158
    "iterate" <Ast::Token::Ptr> (283) 92
    "do" <Ast::Token::Ptr> (284) 89 90 91 103 158
    "if" <Ast::Token::Ptr> (285) 78 79 157
    "then" <Ast::Token::Ptr> (286) 78 79 157
    "else" <Ast::Token::Ptr> (287) 79 157
    "case" <Ast::Token::Ptr> (288) 80 81
    "of" <Ast::Token::Ptr> (289) 80 81
    "default" <Ast::Token::Ptr> (290) 84
    "holds" <Ast::Token::Ptr> (291) 159
    "exists" <Ast::Token::Ptr> (292) 160
    "with" <Ast::Token::Ptr> (293) 90 160
    "as" <Ast::Token::Ptr> (294) 46 155
    "while" <Ast::Token::Ptr> (295) 103
    "undef" <Ast::Token::Ptr> (296) 174
    "false" <Ast::Token::Ptr> (297) 176
    "true" <Ast::Token::Ptr> (298) 175
    "and" <Ast::Token::Ptr> (299) 136
    "or" <Ast::Token::Ptr> (300) 134
    "xor" <Ast::Token::Ptr> (301) 135
    "implies" <Ast::Token::Ptr> (302) 138
    "not" <Ast::Token::Ptr> (303) 139
    "+" <Ast::Token::Ptr> (304) 120 122
    "-" <Ast::Token::Ptr> (305) 121 123
    "=" <Ast::Token::Ptr> (306) 23 24 25 26 27 28 29 30 31 32 41 44 47 48 54 55 129 215 239
    "(" <Ast::Token::Ptr> (307) 25 26 29 30 31 32 115 116 144 145 146 148 149 150 152 153 154 188 189 202 203 220
    ")" <Ast::Token::Ptr> (308) 25 26 29 30 31 32 115 116 144 145 146 148 149 150 152 153 154 188 189 202 203 220
    "[" <Ast::Token::Ptr> (309) 184 185 186 187 248 249 250
    "]" <Ast::Token::Ptr> (310) 184 185 186 187 248 249 250
    "{" <Ast::Token::Ptr> (311) 22 23 47 48 54 55 80 81 93 95 213 215
    "}" <Ast::Token::Ptr> (312) 22 23 47 48 54 55 80 81 93 95 213 215
    ":" <Ast::Token::Ptr> (313) 35 60 61 84 85 86 192 232 245
    "::" <Ast::Token::Ptr> (314) 43 224
    "_" <Ast::Token::Ptr> (315) 85
    "|" <Ast::Token::Ptr> (316) 161
    "@" <Ast::Token::Ptr> (317) 183
    "," <Ast::Token::Ptr> (318) 39 104 188 190 193 202 203 211 217 228 230 237 240
    "<" <Ast::Token::Ptr> (319) 130 204 205
    ">" <Ast::Token::Ptr> (320) 131 204 205
    "*" <Ast::Token::Ptr> (321) 43 124 207
    "/" <Ast::Token::Ptr> (322) 125
    "%" <Ast::Token::Ptr> (323) 126
    "^" <Ast::Token::Ptr> (324) 127
    "'" <Ast::Token::Ptr> (325) 206
    ".." <Ast::Token::Ptr> (326) 187
    "." <Ast::Token::Ptr> (327) 147 148 149 150 151
    "->" <Ast::Token::Ptr> (328) 24 25 26 28 30 32 35 60 61 205 220 221 245
    "=>" <Ast::Token::Ptr> (329) 137
    ":=" <Ast::Token::Ptr> (330) 101
    "!=" <Ast::Token::Ptr> (331) 128
    "<=" <Ast::Token::Ptr> (332) 132
    ">=" <Ast::Token::Ptr> (333) 133
    "{|" <Ast::Token::Ptr> (334) 97 99
    "|}" <Ast::Token::Ptr> (335) 97 99
    "binary" <ValueLiteral::Ptr> (336) 180
    "hexadecimal" <ValueLiteral::Ptr> (337) 181
    "integer" <ValueLiteral::Ptr> (338) 177
    "rational" <ValueLiteral::Ptr> (339) 178
    "decimal" <ValueLiteral::Ptr> (340) 179
    "string" <ValueLiteral::Ptr> (341) 182
    "identifier" <Identifier::Ptr> (342) 222
    BASIC_TYPE (343)
    CALL (344)
    UPLUS (345)
    UMINUS (346)
    CALL_WITHOUT_ARGS (347)


Nonterminals, with rules where they appear

    $accept (93)
        on left: 0
    Specification <Specification::Ptr> (94)
        on left: 1
        on right: 0
    Header <HeaderDefinition::Ptr> (95)
        on left: 2 3
        on right: 1
    Definitions <Definitions::Ptr> (96)
        on left: 4 5
        on right: 1 4
    AttributedDefinition <Definition::Ptr> (97)
        on left: 6 7 8
        on right: 4 5
    Definition <Definition::Ptr> (98)
        on left: 9 10 11 12 13 14 15 16 17 18 19 20
        on right: 6 7
    InitDefinition <InitDefinition::Ptr> (99)
        on left: 21 22
        on right: 9
    EnumerationDefinition <EnumerationDefinition::Ptr> (100)
        on left: 23
        on right: 10
    DerivedDefinition <DerivedDefinition::Ptr> (101)
        on left: 24 25 26
        on right: 11 50 56
    RuleDefinition <RuleDefinition::Ptr> (102)
        on left: 27 28 29 30 31 32
        on right: 12 51 57
    FunctionDefinitions <FunctionDefinitions::Ptr> (103)
        on left: 33 34
        on right: 33 47
    FunctionDefinition <FunctionDefinition::Ptr> (104)
        on left: 35
        on right: 13 33 34
    EnumeratorDefinition <EnumeratorDefinition::Ptr> (105)
        on left: 36 37 38
        on right: 39 40
    Enumerators <Enumerators::Ptr> (106)
        on left: 39 40
        on right: 23 39
    UsingDefinition <UsingDefinition::Ptr> (107)
        on left: 41
        on right: 14
    UsingPathDefinition <UsingPathDefinition::Ptr> (108)
        on left: 42 43
        on right: 15
    InvariantDefinition <InvariantDefinition::Ptr> (109)
        on left: 44
        on right: 16
    ImportDefinition <ImportDefinition::Ptr> (110)
        on left: 45 46
        on right: 17
    StructureDefinition <StructureDefinition::Ptr> (111)
        on left: 47
        on right: 18
    FeatureDefinition <FeatureDefinition::Ptr> (112)
        on left: 48
        on right: 19
    FeatureDeclarationOrDefinition <Definition::Ptr> (113)
        on left: 49 50 51
        on right: 52 53
    FeatureDeclarationsAndDefinitions <Definitions::Ptr> (114)
        on left: 52 53
        on right: 48 52
    ImplementationDefinition <ImplementationDefinition::Ptr> (115)
        on left: 54 55
        on right: 20
    ImplementationDefinitionDefinition <Definition::Ptr> (116)
        on left: 56 57
        on right: 58 59
    ImplementationDefinitionDefinitions <Definitions::Ptr> (117)
        on left: 58 59
        on right: 54 55 58
    DeclarationDefinition <DeclarationDefinition::Ptr> (118)
        on left: 60 61
        on right: 49
    Rules <Rules::Ptr> (119)
        on left: 62 63
        on right: 62 93 94 97 98
    Rule <Rule::Ptr> (120)
        on left: 64 65 66 67 68 69 70 71 72 73 74 75 76
        on right: 27 28 29 30 31 32 62 63 78 79 84 85 86 87 88 89 90 91 92 103
    SkipRule <SkipRule::Ptr> (121)
        on left: 77
        on right: 64
    ConditionalRule <ConditionalRule::Ptr> (122)
        on left: 78 79
        on right: 65
    CaseRule <CaseRule::Ptr> (123)
        on left: 80 81
        on right: 66
    CaseLabels <Cases::Ptr> (124)
        on left: 82 83
        on right: 80 82
    CaseLabel <Case::Ptr> (125)
        on left: 84 85 86
        on right: 82 83
    LetRule <LetRule::Ptr> (126)
        on left: 87
        on right: 67
    LocalRule <LocalRule::Ptr> (127)
        on left: 88
        on right: 68
    ForallRule <ForallRule::Ptr> (128)
        on left: 89 90
        on right: 69
    ChooseRule <ChooseRule::Ptr> (129)
        on left: 91
        on right: 70
    IterateRule <IterateRule::Ptr> (130)
        on left: 92
        on right: 71
    BlockRule <BlockRule::Ptr> (131)
        on left: 93 94 95 96
        on right: 72
    SequenceRule <SequenceRule::Ptr> (132)
        on left: 97 98 99 100
        on right: 73
    UpdateRule <UpdateRule::Ptr> (133)
        on left: 101
        on right: 74
    CallRule <CallRule::Ptr> (134)
        on left: 102
        on right: 75
    WhileRule <WhileRule::Ptr> (135)
        on left: 103
        on right: 76
    Terms <Expressions::Ptr> (136)
        on left: 104 105
        on right: 104 145 149 153 185 188
    Term <Expression::Ptr> (137)
        on left: 106 107 108 109 110 111 112 113 114
        on right: 24 25 26 44 78 79 80 81 86 89 90 91 101 103 104 105 115 122 123 124 125 126 127 128 129 130 131 132 133 134 135 136 137 138 139 156 157 158 159 160 187 188 192 206 213 219 220 221 239 252
    SimpleOrClaspedTerm <Expression::Ptr> (138)
        on left: 115 116 117 118 119 120 121
        on right: 106 120 121 147 148 149 150 151 155 161
    OperatorExpression <Expression::Ptr> (139)
        on left: 122 123 124 125 126 127 128 129 130 131 132 133 134 135 136 137 138 139
        on right: 108
    CallExpression <CallExpression::Ptr> (140)
        on left: 140 141 142
        on right: 102 117 152 153 154
    DirectCallExpression <DirectCallExpression::Ptr> (141)
        on left: 143 144 145 146
        on right: 101 140
    MethodCallExpression <MethodCallExpression::Ptr> (142)
        on left: 147 148 149 150
        on right: 141
    LiteralCallExpression <LiteralCallExpression::Ptr> (143)
        on left: 151
        on right: 118
    IndirectCallExpression <IndirectCallExpression::Ptr> (144)
        on left: 152 153 154
        on right: 142
    TypeCastingExpression <TypeCastingExpression::Ptr> (145)
        on left: 155
        on right: 107
    LetExpression <LetExpression::Ptr> (146)
        on left: 156
        on right: 109
    ConditionalExpression <ConditionalExpression::Ptr> (147)
        on left: 157
        on right: 110
    ChooseExpression <ChooseExpression::Ptr> (148)
        on left: 158
        on right: 111
    UniversalQuantifierExpression <UniversalQuantifierExpression::Ptr> (149)
        on left: 159
        on right: 112
    ExistentialQuantifierExpression <ExistentialQuantifierExpression::Ptr> (150)
        on left: 160
        on right: 113
    CardinalityExpression <CardinalityExpression::Ptr> (151)
        on left: 161
        on right: 114
    Literal <Literal::Ptr> (152)
        on left: 162 163 164 165 166 167 168 169 170 171 172 173
        on right: 119
    UndefinedLiteral <UndefLiteral::Ptr> (153)
        on left: 174
        on right: 162
    BooleanLiteral <ValueLiteral::Ptr> (154)
        on left: 175 176
        on right: 163
    IntegerLiteral <ValueLiteral::Ptr> (155)
        on left: 177
        on right: 151 164
    RationalLiteral <ValueLiteral::Ptr> (156)
        on left: 178
        on right: 165
    DecimalLiteral <ValueLiteral::Ptr> (157)
        on left: 179
        on right: 166
    BinaryLiteral <ValueLiteral::Ptr> (158)
        on left: 180 181
        on right: 167
    StringLiteral <ValueLiteral::Ptr> (159)
        on left: 182
        on right: 168
    ReferenceLiteral <ReferenceLiteral::Ptr> (160)
        on left: 183
        on right: 169
    ListLiteral <ListLiteral::Ptr> (161)
        on left: 184 185 186
        on right: 170
    RangeLiteral <RangeLiteral::Ptr> (162)
        on left: 187
        on right: 171
    TupleLiteral <TupleLiteral::Ptr> (163)
        on left: 188
        on right: 172 221
    RecordLiteral <RecordLiteral::Ptr> (164)
        on left: 189
        on right: 173
    Assignments <NamedExpressions::Ptr> (165)
        on left: 190 191
        on right: 189 190
    Assignment <NamedExpression::Ptr> (166)
        on left: 192
        on right: 190 191
    Types <Types::Ptr> (167)
        on left: 193 194
        on right: 193 202 204
    Type <libcasm_fe::Ast::Type::Ptr> (168)
        on left: 195 196 197 198 199 200
        on right: 24 25 26 28 30 32 35 41 54 55 60 61 155 193 194 202 205 207 208 232 245
    BasicType <BasicType::Ptr> (169)
        on left: 201
        on right: 195
    TupleType <TupleType::Ptr> (170)
        on left: 202
        on right: 196
    RecordType <RecordType::Ptr> (171)
        on left: 203
        on right: 197
    TemplateType <TemplateType::Ptr> (172)
        on left: 204
        on right: 198
    RelationType <RelationType::Ptr> (173)
        on left: 205
        on right: 199
    FixedSizedType <FixedSizedType::Ptr> (174)
        on left: 206
        on right: 200
    FunctionParameters <Types::Ptr> (175)
        on left: 207 208
        on right: 207 209
    MaybeFunctionParameters <Types::Ptr> (176)
        on left: 209 210
        on right: 35 60 61 205 245
    Parameters <VariableDefinitions::Ptr> (177)
        on left: 211 212
        on right: 25 29 30 211
    MaybeDefined <Defined::Ptr> (178)
        on left: 213 214
        on right: 35 245
    MaybeInitially <Initially::Ptr> (179)
        on left: 215 216
        on right: 35 245
    Initializers <Initializers::Ptr> (180)
        on left: 217 218
        on right: 22 215 217
    Initializer <Initializer::Ptr> (181)
        on left: 219 220 221
        on right: 217 218
    Identifier <Identifier::Ptr> (182)
        on left: 222 223
        on right: 23 24 25 26 27 28 29 30 31 32 35 36 37 41 44 46 47 48 60 61 147 148 149 150 192 224 225 227 232 245 251 252
    IdentifierPath <IdentifierPath::Ptr> (183)
        on left: 224 225
        on right: 21 42 43 45 46 54 143 144 145 146 183 201 204 205 206 224
    Variable <VariableDefinition::Ptr> (184)
        on left: 226 227
        on right: 233 234
    AttributedVariables <VariableDefinitions::Ptr> (185)
        on left: 228 229
        on right: 89 90 91 158 159 160 228
    TypedVariables <VariableDefinitions::Ptr> (186)
        on left: 230 231
        on right: 203 230
    TypedVariable <VariableDefinition::Ptr> (187)
        on left: 232
        on right: 203 226 230 231 235 236
    AttributedVariable <VariableDefinition::Ptr> (188)
        on left: 233 234
        on right: 228 229 239
    TypedAttributedVariable <VariableDefinition::Ptr> (189)
        on left: 235 236
        on right: 211 212
    VariableBindings <VariableBindings::Ptr> (190)
        on left: 237 238
        on right: 87 156 237
    VariableBinding <VariableBinding::Ptr> (191)
        on left: 239
        on right: 237 238
    LocalFunctionDefinitions <FunctionDefinitions::Ptr> (192)
        on left: 240 241
        on right: 88 240
    AttributedLocalFunctionDefinition <FunctionDefinition::Ptr> (193)
        on left: 242 243 244
        on right: 240 241
    LocalFunctionDefinition <FunctionDefinition::Ptr> (194)
        on left: 245
        on right: 242 243
    Attributes <Attributes::Ptr> (195)
        on left: 246 247
        on right: 2 6 37 233 235 242 246
    Attribute <Attribute::Ptr> (196)
        on left: 248 249 250
        on right: 246 247
    BasicAttribute <BasicAttribute::Ptr> (197)
        on left: 251
        on right: 248
    ExpressionAttribute <ExpressionAttribute::Ptr> (198)
        on left: 252
        on right: 249


State 0

    0 $accept: • Specification "end of file"

    "CASM"  shift, and go to state 1
    "["     shift, and go to state 2

    Specification  go to state 3
    Header         go to state 4
    Attributes     go to state 5
    Attribute      go to state 6


State 1

    3 Header: "CASM" •

    $default  reduce using rule 3 (Header)


State 2

  248 Attribute: "[" • BasicAttribute "]"
  249          | "[" • ExpressionAttribute "]"
  250          | "[" • error "]"

    error         shift, and go to state 7
    "in"          shift, and go to state 8
    "identifier"  shift, and go to state 9

    Identifier           go to state 10
    BasicAttribute       go to state 11
    ExpressionAttribute  go to state 12


State 3

    0 $accept: Specification • "end of file"

    "end of file"  shift, and go to state 13


State 4

    1 Specification: Header • Definitions

    error          shift, and go to state 14
    "init"         shift, and go to state 15
    "derived"      shift, and go to state 16
    "enumeration"  shift, and go to state 17
    "rule"         shift, and go to state 18
    "using"        shift, and go to state 19
    "invariant"    shift, and go to state 20
    "import"       shift, and go to state 21
    "structure"    shift, and go to state 22
    "feature"      shift, and go to state 23
    "implements"   shift, and go to state 24
    "function"     shift, and go to state 25
    "["            shift, and go to state 2

    Definitions               go to state 26
    AttributedDefinition      go to state 27
    Definition                go to state 28
    InitDefinition            go to state 29
    EnumerationDefinition     go to state 30
    DerivedDefinition         go to state 31
    RuleDefinition            go to state 32
    FunctionDefinition        go to state 33
    UsingDefinition           go to state 34
    UsingPathDefinition       go to state 35
    InvariantDefinition       go to state 36
    ImportDefinition          go to state 37
    StructureDefinition       go to state 38
    FeatureDefinition         go to state 39
    ImplementationDefinition  go to state 40
    Attributes                go to state 41
    Attribute                 go to state 6


State 5

    2 Header: Attributes • "CASM"
  246 Attributes: Attributes • Attribute

    "CASM"  shift, and go to state 42
    "["     shift, and go to state 2

    Attribute  go to state 43


State 6

  247 Attributes: Attribute •

    $default  reduce using rule 247 (Attributes)


State 7

  250 Attribute: "[" error • "]"

    "]"  shift, and go to state 44


State 8

  223 Identifier: "in" •

    $default  reduce using rule 223 (Identifier)


State 9

  222 Identifier: "identifier" •

    $default  reduce using rule 222 (Identifier)


State 10

  251 BasicAttribute: Identifier •
  252 ExpressionAttribute: Identifier • Term

    "let"          shift, and go to state 45
    "in"           shift, and go to state 8
    "forall"       shift, and go to state 46
    "choose"       shift, and go to state 47
    "if"           shift, and go to state 48
    "exists"       shift, and go to state 49
    "undef"        shift, and go to state 50
    "false"        shift, and go to state 51
    "true"         shift, and go to state 52
    "not"          shift, and go to state 53
    "+"            shift, and go to state 54
    "-"            shift, and go to state 55
    "("            shift, and go to state 56
    "["            shift, and go to state 57
    "|"            shift, and go to state 58
    "@"            shift, and go to state 59
    "binary"       shift, and go to state 60
    "hexadecimal"  shift, and go to state 61
    "integer"      shift, and go to state 62
    "rational"     shift, and go to state 63
    "decimal"      shift, and go to state 64
    "string"       shift, and go to state 65
    "identifier"   shift, and go to state 9

    $default  reduce using rule 251 (BasicAttribute)

    Term                             go to state 66
    SimpleOrClaspedTerm              go to state 67
    OperatorExpression               go to state 68
    CallExpression                   go to state 69
    DirectCallExpression             go to state 70
    MethodCallExpression             go to state 71
    LiteralCallExpression            go to state 72
    IndirectCallExpression           go to state 73
    TypeCastingExpression            go to state 74
    LetExpression                    go to state 75
    ConditionalExpression            go to state 76
    ChooseExpression                 go to state 77
    UniversalQuantifierExpression    go to state 78
    ExistentialQuantifierExpression  go to state 79
    CardinalityExpression            go to state 80
    Literal                          go to state 81
    UndefinedLiteral                 go to state 82
    BooleanLiteral                   go to state 83
    IntegerLiteral                   go to state 84
    RationalLiteral                  go to state 85
    DecimalLiteral                   go to state 86
    BinaryLiteral                    go to state 87
    StringLiteral                    go to state 88
    ReferenceLiteral                 go to state 89
    ListLiteral                      go to state 90
    RangeLiteral                     go to state 91
    TupleLiteral                     go to state 92
    RecordLiteral                    go to state 93
    Identifier                       go to state 94
    IdentifierPath                   go to state 95


State 11

  248 Attribute: "[" BasicAttribute • "]"

    "]"  shift, and go to state 96


State 12

  249 Attribute: "[" ExpressionAttribute • "]"

    "]"  shift, and go to state 97


State 13

    0 $accept: Specification "end of file" •

    $default  accept


State 14

    8 AttributedDefinition: error •

    $default  reduce using rule 8 (AttributedDefinition)


State 15

   21 InitDefinition: "init" • IdentifierPath
   22               | "init" • "{" Initializers "}"

    "in"          shift, and go to state 8
    "{"           shift, and go to state 98
    "identifier"  shift, and go to state 9

    Identifier      go to state 94
    IdentifierPath  go to state 99


State 16

   24 DerivedDefinition: "derived" • Identifier "->" Type "=" Term
   25                  | "derived" • Identifier "(" Parameters ")" "->" Type "=" Term
   26                  | "derived" • Identifier "(" error ")" "->" Type "=" Term

    "in"          shift, and go to state 8
    "identifier"  shift, and go to state 9

    Identifier  go to state 100


State 17

   23 EnumerationDefinition: "enumeration" • Identifier "=" "{" Enumerators "}"

    "in"          shift, and go to state 8
    "identifier"  shift, and go to state 9

    Identifier  go to state 101


State 18
